# mammut

./: CMakeLists.txt  build_all.sh
macosx/: Info.plist  icon.icns
src/: CombSplit.h  DasButtons.cpp  DasButtons.h  Filter.h  Gain.h  Interface.cpp  Interface.h  Interface_old.cpp  Interface_old.h  Invert.h  JUCE_Includes.h  KeepPeaks.cpp  KeepPeaks.h  MainAppWindow.h  Mirror.cpp  PictureHolder.h  Prefs.h  Progressbar.cpp  SpectrumShift.h  SplitRealImag.h  Stereo.cpp  Stretch.cpp  Stretch.h  Threshold.cpp  Threshold.h  Wobble.h  Zoom.h  error.cpp  gui.cpp  juceplay.cpp  oggsoundholder.cpp  oggsoundholder.h  tempfile.cpp  transformheader.h
src/audio/: juceplay.cpp
src/c_core/: c_interface.c  fft.c  load.c  loadmult.c  mammut.h
src/core/: AppSettings.h  MainHeader.h  mammut_logging.c  mammut_logging.h
src/core/utils/: tempfile.cpp
src/gui/: DasButtons.cpp  DasButtons.h  GraphComponent.h  Interface.cpp  Interface.h  Prefs.cpp  Prefs.h  Progressbar.cpp  Zoom.cpp  error.cpp  gui.cpp
src/transforms/: AmplitudeToPhase.cpp  AmplitudeToPhase.h  BlockSwap.cpp  BlockSwap.h  CombSplit.cpp  DerivativeAmp.cpp  DerivativeAmp.h  Filter.cpp  Gain.cpp  Invert.cpp  Mirror.cpp  Mirror.h  MultiplyPhase.cpp  MultiplyPhase.h  SpectrumShift.cpp  SplitRealImag.cpp  Stereo.cpp  Stereo.h  Stretch.cpp  Threshold.cpp  Wobble.cpp
